<resources>
    <string name="app_name">PJE3JX</string>

    <string name="hello_world">En construction…</string>

    <string name="title_activity_add_book">Ajouter un livre</string>
    <string name="title_activity_list_books">Liste des livres</string>
    <string name = "name">NAME</string>

    <string name="action_add">Ajouter</string>
    <string name="action_list">Liste des livres</string>

    <string name="book_title">Titre</string>
    <string name="book_author">Auteur</string>
    <string name="book_image">Image</string>
    <string name="book_genre">Genre</string>


</resources>
